quorum/test/tests/other/Pass/ConstantChanger.quorum
class ConstantChanger
    action DoIt(ClassWithConstants r)
        r:z = 1.2731231 + 9.091
        r:c = "z" + r:z
    end
end