quorum/test/tests/other/Fail/ReassignConstantFromMethodCallingMethod.quorum
class Main
    ClassWithConstants k

    action Main
        ChangeThem(k)
    end

    action ChangeThem(ClassWithConstants k)
        ReallyTryTo(k)
    end

    action ReallyTryTo(ClassWithConstants z)
        ConstantChanger l
        l:DoIt(z)
    end
end